public/css/dashboard-application.css
@media (max-width: 1024px) {
	body {
		background-color: #fbf3f0;
	}
}

.application-form {
	background-color: #d1ebfa;
}

.application-form label {
	color: #2a2d4e;
}

.application-form a {
	color: white;
	text-decoration: none;
}

.application-form a:hover {
	color: #2a2d4e;
}

.note {
	text-align: right;
	padding-right: 50px;
}

.note label {
	padding-top: 15px;
	padding-bottom: 5px;
}

.deadline {
	font-weight: bold;
	font-size: 14px;
	color: white;
	text-transform: uppercase;
	margin-top: 20px;
	margin-bottom: 6vh;
}

.submission {
	background-color: #fbf3f0;
	border-radius: 5px;
	padding: 40px 20px 30px 20px;
}

.submission p {
	color: #2a2d4e;
	font-weight: bold;
	font-size: 18px;
}

.street-graphic {
	padding-top: 30px;
	width: 500px;
}

@media (max-width: 860px) {
	.street-graphic {
		display: none;
	}
}

.top-box {
	background-color: #d1ebfa;
	height: 85px;
}

/* image responsiveness */
/* #img-header-top {
	background-color: #fbf3f0;
	width: 60%;
	display: block;
	margin-top: 130px; 
	margin-left: auto;
	margin-right: auto;
}

#img-header {
	width: 60%;
	display: block;
	margin-top: 20px;
	margin-left: auto;
	margin-right: auto;
	padding-bottom: 30px;
	background-color: #fbf3f0;
} */

#img-side {
	width: 20%;
	position: absolute;
	left: 55%;
	top: 1010px;
	/* background-color: #FBF3F0; */
}

/* #img-submission {
	width: 85%;
	margin-top: 90px;
	margin-bottom: 50px;
	padding-left: 5px;
} */

@media (max-width: 980px) {
	#img-side {
		display: none;
	}
	#img-header-top,
	#img-header {
		/* margin-bottom: 5vh; */
		width: 80%;
	}
}

.header {
	margin-bottom: 30px;
}

.row {
	/* text-align: center; */
}
.row h1 {
	text-align: center;
	display: inline-block;
	background-color: #efa516;
	/* width: 100%; */
	width: 682px;
	height: 76px;
	padding: 15px 0px 15px 0px;
	color: white;
	font-family: "Roboto", sans-serif;
	font-style: italic;
	font-weight: bold;
	font-size: 40px;
	line-height: 47px;
	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
	margin-bottom: 15px;
}

/* Header for each subsection */
.header h3 {
	text-align: center;
	display: inline-block;
	border: none;
	color: white;
	background-color: #efa516;
	font-family: "Source Code Pro", monospace;
	padding: 22px 0px 9px 0px;
	width: 369px;
	height: 71px;
	font-size: 24px;
	font-style: italic;
	font-weight: bold;
	margin-left: 100px;
	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.header h3:before,
.header h3:after {
	background-color: #efa516;
	content: "";
	display: inline-block;
	height: 5px;
	position: relative;
	vertical-align: middle;
	width: 50%;
}

.header h3:before {
	right: 2em;
	margin-left: -50%;
}
.header h3:after {
	left: 2em;
	margin-right: -50%;
}

fieldset {
	padding-left: 11%;
}

.radio-inline {
	margin-bottom: 2vh;
	margin-right: 2%;
}

@media (max-width: 1200px) {
	body {
		background-position: 550px 40px;
	}
}
@media (max-width: 650px) {
	body {
		background-position: 400px 40px;
	}
	.header h3 {
		width: 70%;
	}
	div.header:after {
	}
}

/* FORM FIELDS */
.short-answer {
	margin: 0 0 40px;
}

textarea {
	resize: none;
}

.whitespace {
	color: transparent;
}

.form-control {
	height: 35px;
	margin-bottom: 10px;
	border-radius: 12px;
}

.sublabel {
	text-transform: none;
}

textarea::placeholder,
input::placeholder {
	text-transform: uppercase;
	color: #b1b1b1 !important;
}

@media (max-width: 828px) {
	.whitespace {
		display: none;
	}
}

/* BUTTONS */
.buttons {
	text-align: center;
	padding-bottom: 30px;
}

.resume {
	background-color: #95b9cd;
	border-color: #95b9cd;
	text-transform: uppercase;
}

.buttons button {
	margin: 0 60px;
	/* background-color: #EFA516; */
	width: 364px;
	height: 54px;
	margin-top: 50px;
	border: none;
}
.submit-application {
	color: white;
	font-family: "Roboto", sans-serif;
	background-color: #50b5dd;
	display: inline-block;
	padding: 8px 12px;
	cursor: pointer;
	border-radius: 12px;
	font-style: normal;
	font-weight: bold;
	font-size: 18px;
	border: none;
}

.buttons button:hover {
	background-color: transparent;
}

.file-upload {
	background-color: #50b5dd;
	display: inline-block;
	padding: 8px 12px;
	cursor: pointer;
	border-radius: 12px;
	font-style: normal;
	font-weight: bold;
	font-size: 18px;
	border: none;
}

.file-upload:hover {
	background-color: transparent;
	/*border-color: #2a2d4e;*/
}

@media (max-width: 583px) {
	.buttons {
		padding: 0 60px;
	}

	.buttons button {
		width: 100%;
		margin: 15px 0;
	}
}

.banner-desktop-graphic {
	width: 85%;
	margin-top: 90px;
	margin-bottom: 50px;
	padding-left: 5px;
}

.banner-tablet-graphic {
	display: none;
	width: 85%;
	margin-top: 50px;
	margin-bottom: 50px;
}

.banner-mobile-graphic {
	display: none;
	width: 85%;
	margin-top: 50px;
	margin-bottom: 50px;
}

@media (max-width: 768px) {
	.banner-desktop-graphic {
		display: none;
	}
	.banner-tablet-graphic {
		display: initial;
	}
	.banner-mobile-graphic {
		display: none;
	}
}

@media (max-width: 583px) {
	.banner-desktop-graphic {
		display: none;
	}
	.banner-tablet-graphic {
		display: none;
	}
	.banner-mobile-graphic {
		display: initial;
	}
}

/* SUBMIT MESSAGE */
.submit-message {
	text-align: center;
	padding: 0 0 50px;
}

/* GLOBAL STYLESHEET: FORM.CSS
 * Global stylesheet for form elements
 */

.ideahacks-form {
	/* font-family: "Roboto"; */
}

/* LABEL */
.ideahacks-form label {
	text-align: left;
	font-size: 18px;
	line-height: 20px;
	font-weight: normal;
	margin-left: 5px;
	margin-bottom: 5px;
	/* color: #40698f; */
	color: #2a2d4e;
}

/* INPUT */
.ideahacks-form input,
.ideahacks-form input:focus,
.ideahacks-form input[readonly] {
	border-radius: 12px;
	background-color: white;
	width: 80%;
	margin-bottom: 0px;
}

.ideahacks-form select {
	border-radius: 12px;
	background-color: white;
	width: 80%;
	margin-bottom: 0px;
}

.ideahacks-form input::placeholder {
	color: #f2ccb5;
}

